[package]
name = "excel_ai_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# JSON & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP requests
reqwest = { version = "0.12", features = ["json"] }

# .env loader
dotenvy = "0.15"

# CORS middleware
tower-http = { version = "0.5", features = ["cors"] }

# For better routing, layers etc.
tower = "0.4"
hyper = "1.3"